--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
             <version>2.3.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jogamp.joal/joal-main -->
+        <dependency>
+            <groupId>org.jogamp.joal</groupId>
+            <artifactId>joal-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -29,7 +36,6 @@
             <artifactId>guava</artifactId>
             <version>21.0</version>
         </dependency>
-
     </dependencies>
 
 </project>
